--- a/README.md.in
+++ b/README.md.in
@@ -1,10 +1,10 @@
-[xde-theme-penguins -- read me first file.  2014-09-12]: #
+[@PACKAGE@ -- read me first file.  @DATE@]: #
 
-xde-theme-penguins
+@PACKAGE@
 ===============
 
-Package `xde-theme-penguins-1.1.4` was released under CCPL:cc-by-nc-nd-3.0
-license 2014-09-12.
+Package `@PACKAGE@-@VERSION@` was released under CCPL:cc-by-nc-nd-3.0
+license @DATE@.
 
 This is a theme and a set of backgrounds for the _XDE (X Desktop
 Environment)_ that provides a set of backgrounds on
@@ -12,17 +12,17 @@ a Penguin theme.
 This theme uses the Squared-blue style from the [`xde-styles`][11]
 package.
 
-The source for `xde-theme-penguins` is hosted on [GitHub][1].
+The source for `@PACKAGE@` is hosted on [GitHub][1].
 
 
 Release
 -------
 
-This is the `xde-theme-penguins-1.1.4` package, released 2014-09-12.
+This is the `@PACKAGE@-@VERSION@` package, released @DATE@.
 This release, and the latest version, can be obtained from [GitHub][1],
 using a command such as:
 
-    $> git clone https://github.com/bbidulock/xde-theme-penguins.git
+    $> git clone https://github.com/bbidulock/@PACKAGE@.git
 
 Please see the [RELEASE][3] and [NEWS][4] files for release notes and
 history of user visible changes for the current version, and the
@@ -44,17 +44,17 @@ Please see the license in the file [COPYING][10].
 Quick Start
 -----------
 
-The quickest and easiest way to get `xde-theme-penguins` up and
+The quickest and easiest way to get `@PACKAGE@` up and
 running is to run the following commands:
 
-    $> git clone https://github.com/bbidulock/xde-theme-penguins.git
-    $> cd xde-theme-penguins
+    $> git clone https://github.com/bbidulock/@PACKAGE@.git
+    $> cd @PACKAGE@
     $> ./autogen.sh
     $> ./configure
     $> make
     $> make DESTDIR="$pkgdir" install
 
-This will configure, compile and install `xde-theme-penguins` the
+This will configure, compile and install `@PACKAGE@` the
 quickest.  For those who like to spend the extra 15 seconds reading
 `./configure --help`, some compile time options can be turned on and off
 before the build.
@@ -91,16 +91,16 @@ Following are the seven wallpapers included in the theme:
 
 
 
-[1]: https://github.com/bbidulock/xde-theme-penguins
-[2]: https://github.com/bbidulock/xde-theme-penguins/issues
-[3]: https://github.com/bbidulock/xde-theme-penguins/blob/master/RELEASE
-[4]: https://github.com/bbidulock/xde-theme-penguins/blob/master/NEWS
-[5]: https://github.com/bbidulock/xde-theme-penguins/blob/master/ChangeLog
-[6]: https://github.com/bbidulock/xde-theme-penguins/blob/master/TODO
-[7]: https://github.com/bbidulock/xde-theme-penguins/blob/master/COMPLIANCE
-[8]: https://github.com/bbidulock/xde-theme-penguins/blob/master/INSTALL
-[9]: https://github.com/bbidulock/xde-theme-penguins/blob/master/LICENSE
-[10]: https://github.com/bbidulock/xde-theme-penguins/blob/master/COPYING
+[1]: https://github.com/bbidulock/@PACKAGE@
+[2]: https://github.com/bbidulock/@PACKAGE@/issues
+[3]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/RELEASE
+[4]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/NEWS
+[5]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/ChangeLog
+[6]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/TODO
+[7]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/COMPLIANCE
+[8]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/INSTALL
+[9]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/LICENSE
+[10]: https://github.com/bbidulock/@PACKAGE@/blob/@BRANCH@/COPYING
 [11]: https://github.com/bbidulock/xde-styles
 [12]: https://github.com/bbidulock/xde-ctools
 
